@startuml

title ExiFlex Peripheral class design\n\nArchitecture is based on Cocoa MVC

package controller <<Rectangle>> {
  class AppController {
    # @Inject appConfig
    # bleServer
    # bleServiceExpose
    # colorMeterModel
    # exposureMeterModel
    --
    - init()
    - shutdown()
    - onMeasureLuxEvent()
    - onMeasureRGBEvent()
    - onShutterEvent()
    - onConnect()
    - onDisconnect()
    - onRecvEvent()
    - onRecvISO()
  }
}

package view <<Rectangle>> {
  class ino_file {
    # appConfig
    # appController
    # eventLoopDelegate
    # loopHandle
    --
    - setup()
    - loop()
  }
  Interface EventLoopDelegate {
    - {abstract} onMeasureLuxEvent()
    - {abstract} onMeasureRGBEvent()
    - {abstract} onShutterEven()
  }

  class BleServiceExpose {
    # bleServiceExposeDelegate
    # pCharacteristicEvent
    # pCharacteristicLux
    # pCharacteristicRGB
    # pCharacteristicISO
    --
    - sendEvent()
    - sendLux()
    - sendRGB()
  }
  Interface BleServiceExposeDelegate {
    - {abstract} onRecvEvent()
    - {abstract} onRecvISO()
  }

  class BLEServer {
    # bleServerCallbacks
    --
    - setCallbacks()
    - createService()
  }
  Interface BLEServerCallbacks {
    - {abstract} onConnect()
    - {abstract} onDisconnect()
  }

}

package model <<Rectangle>> {
  class ExposureMeterModel {
    # @Inject appConfig
    # luxSensorDriver
    --
    - initLuxSensor()
    - getExposure()
  }

  class ColorMeterModel {
    # @Inject appConfig
    # colorSensorDriver
    --
    - initColorSensor()
    - measureColor()
  }
}

' controller to model relation
'AppController --> ExposureMeterModel: Update
'AppController --> ColorMeterModel: Update

' controller to view relation
ino_file --> EventLoopDelegate: User action (Local)
'AppController ..|> EventLoopDelegate

'AppController --> BLEServer: Create Service
BLEServer --> BLEServerCallbacks: Notify
'AppController ..|> BLEServerCallbacks

'AppController --> BleServiceExpose: Update
BleServiceExpose --> BleServiceExposeDelegate: User action (Remote)
'AppController ..|> BleServiceExposeDelegate

@enduml
